# llama.cpp

./: CMakeLists.txt  README.md
docs/: build.md  ops.md
docs/backend/: ZenDNN.md
docs/ops/: ZenDNN.csv
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-blas/: CMakeLists.txt  ggml-blas.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.cpp
ggml/src/ggml-cpu/llamafile/: sgemm.cpp
ggml/src/ggml-zendnn/: CMakeLists.txt  ggml-zendnn.cpp
tests/: CMakeLists.txt  test-zendnn-basic.cpp
